# awesome-ml-model

./: README.md  pyproject.toml
data/training/: .gitignore  day_images.dvc  night_images.dvc
